clang/test/BSC/Negative/Generic/InvalidTemplateParameters/do_not_crash2.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

a b<c a d>()})
// expected-error@-1 {{unknown type name 'c'}}
// expected-error@-2 {{expected ',' or '>' in template-parameter-list}}
// expected-error@-3 {{unknown type name 'a'}}
// expected-error@-4 {{use of undeclared identifier 'd'}}
// expected-error@-5 {{extraneous closing brace ('}')}}
// expected-error@-6 {{expected identifier or '('}}
